--- a/_keywords/d0264.md
+++ b/_keywords/d0264.md
@@ -24,7 +24,7 @@ layout: keywords_item
 collection: keywords
 comments: Apollon
 order: '09'
-thumbnail: "/img/derivatives/iiif/images/d0264/full/250,/0/default.jpg"
+thumbnail: "/img/derivatives/simple/d0264/thumbnail.jpg"
 full: "/img/derivatives/iiif/images/d0264/full/1140,/0/default.jpg"
 manifest: "/img/derivatives/iiif/d0264/manifest.json"
 ---
