--- a/_keywords/d0010.md
+++ b/_keywords/d0010.md
@@ -21,7 +21,7 @@ layout: keywords_item
 collection: keywords
 comments:
 order: '10'
-thumbnail: "/img/derivatives/iiif/images/d0010_d0010-01/full/250,/0/default.jpg"
+thumbnail: "/img/derivatives/simple/d0010_d0010-02/thumbnail.jpg"
 full: "/img/derivatives/iiif/images/d0010/full/1140,/0/default.jpg"
 manifest: "/img/derivatives/iiif/d0010/manifest.json"
 
