--- a/_keywords/d0210.md
+++ b/_keywords/d0210.md
@@ -14,7 +14,7 @@ doc_type: Judicial Acts|Civil Cases/Acts|Summons/Return on Service Notice
 abstract: "Raphaël Bernard a free Negro who’s been hired in France by Dumanoir complains
   that Dumanoir does not fulfill his promises and also treats him with rigor, depriving
   him of his due salary and clothing. He asked to be sent back to France at Dumanoir
-  expense and to have a trunk now detained at the Chaouachas returned to him. \r\n\r\n[A
+  expense and to have a trunk now detained at the Chaouachas returned to him. /r/n/r/n[A
   notice was sent to Dumanoir to appear next day without fail]"
 google_doc_prototype: https://docs.google.com/document/d/1t9bKGTmkUlfiGEspbWWpwuotdJOy3SYp4VibetfqOmk/edit?usp=share_link
 keywords: freedom|legalism|emancipation|care|work
@@ -23,7 +23,7 @@ layout: keywords_item
 collection: keywords
 comments: Baptiste
 order: '07'
-thumbnail: "/img/derivatives/iiif/images/d0210_pg01/full/250,/0/default.jpg"
+thumbnail: "/img/derivatives/simple/d0210_d0210-01/thumbnail.jpg"
 full: "/img/derivatives/iiif/images/d0210_pg01/full/1140,/0/default.jpg"
 manifest: "/img/derivatives/iiif/d0210/manifest.json"
 ---
