--- a/pages/docs_by/dates/1714.md
+++ b/pages/docs_by/dates/1714.md
@@ -2,5 +2,5 @@
 layout: facet_page_layout_date
 gallery: True
 field: filing_date
-value: (1714-01-01..1723-12-31)
+value: !ruby/range 1714-01-01..1723-12-31
 ---
