markdown pages for transcriptions and translations

--- a/_keywords/d0004.md
+++ b/_keywords/d0004.md
@@ -17,9 +17,9 @@ abstract: Freedom suit brought by siblings Pedro (Pierre) Morsu and Maria (Marie
   suit for their brother, an enslaved Black-Native man, named Bautista (Baptista/Baptiste)
   Bourgignon (Borguinon). All three siblings are freed.
 google_doc_prototype: https://docs.google.com/document/d/1moSeK7N-EHXCpMcEPU-1oyUzy9p45uV2sjiEUOhCvnQ/edit
-keywords: freedom suit|manumission|Indian slavery|mixed-race|kinship|race|Afro-Indigeneity
+keywords: " freedom suit|manumission|Indian slavery|mixed-race|kinship|race|Afro-Indigeneity"
 lhc_scans:
-layout: keywords_item.html
+layout: keywords_item
 collection: keywords
 comments:
 order: '0'
