--- a/_keywords/d0005.md
+++ b/_keywords/d0005.md
@@ -20,7 +20,7 @@ abstract: 'Freedom suit brought by siblings Pedro (Pierre) Morsu and Maria (Mari
 google_doc_prototype: https://docs.google.com/document/d/1RxoP18XadJu3eWhgbOrEYBnpNO_sE1PcLvM_5hv3huM/edit?usp=sharing
 keywords: freedom suit|manumission|Indian slavery|resistance|mixed-race|kinship|race
 lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-315146.jpg
-layout: keywords_item.html
+layout: keywords_item
 collection: keywords
 comments: Black-Native slave identified. Historical information researched, included
   in WMQ article, digital edition, and summer workshop.
