--- a/_keywords/d0010.md
+++ b/_keywords/d0010.md
@@ -17,7 +17,7 @@ abstract: Report of a murderous assault on Picard, a cook, by Chaume, a white cr
 google_doc_prototype: https://docs.google.com/document/d/1ISlpYEjXEPWP8Z1uuJaS0sUQwQrsy0eQHyYfa4VhAGE/edit?usp=sharing
 keywords: work
 lhc_scans: https://www.lacolonialdocs.org/document/5740
-layout: keywords_item.html
+layout: keywords_item
 collection: keywords
 comments:
 order: '10'
