--- a/_keywords/d0075.md
+++ b/_keywords/d0075.md
@@ -20,7 +20,7 @@ abstract: manumission record for Marie Aram who gained her freedom via her and h
 google_doc_prototype: https://docs.google.com/document/d/1y8SxrnuvtPfV8dGukHnWlRzv11ZhTpX2ar4RGxJ_pmM/edit?usp=sharing
 keywords: kinship|manumission|military|marriage
 lhc_scans: https://www.lacolonialdocs.org/document/6161
-layout: keywords_item.html
+layout: keywords_item
 collection: keywords
 comments:
 order: '12'
