--- a/_keywords/d0111.md
+++ b/_keywords/d0111.md
@@ -21,9 +21,9 @@ abstract: 'Freedom suit brought by Nanette St.-Marc, a free Black woman of Attak
   lived with injuries sustained after a choza, or small shack, fell on him during
   a hurricane'
 google_doc_prototype:
-keywords: "emancipation|free people of color|collaboration"
+keywords: " emancipation|free people of color|collaboration"
 lhc_scans: https://www.lacolonialdocs.org/document/17901
-layout: keywords_item.html
+layout: keywords_item
 collection: keywords
 comments:
 order: '16'
