--- a/_keywords/d0127.md
+++ b/_keywords/d0127.md
@@ -21,7 +21,7 @@ abstract: Enslaver Chaperon declared that on July 28th, 1739 while he was away f
 google_doc_prototype: https://docs.google.com/document/d/1Ph1tkvttVwowlK1eCWi_VA9GUK4mLLNe5ZrvTYAAxHw/edit?usp=share_link
 keywords: marronage|kinship|disability|transportation|collaboration
 lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-137003.jpg
-layout: keywords_item.html
+layout: keywords_item
 collection: keywords
 comments: Fauchon, Antoine and Vulcain escaped to Havana with the unnamed "mulatre
   Espagnol" and are mentioned in a document 9 years later in 1748 when two fugitive
