--- a/_keywords/d0137.md
+++ b/_keywords/d0137.md
@@ -15,9 +15,9 @@ names_native: Marguerite (free Indian), "la sauvagesse de Blancpain"
 doc_type: Judicial Acts,Criminal Cases / Acts,Investigation
 abstract:
 google_doc_prototype: https://docs.google.com/document/d/1tPaa6PE9y-v5kJpvWsuRu7ABfs-HANa958NtJgo5MtI/edit?usp=share_link
-keywords: "marronage|kinship|labor|fugitivity|rival geography|play"
+keywords: " marronage|kinship|labor|fugitivity|rival geography|play"
 lhc_scans: https://www.lacolonialdocs.org/document/10481
-layout: keywords_item.html
+layout: keywords_item
 collection: keywords
 comments: 'Multi-part case referencing gumbo ("gombeaux"). Gumbo doc:  https://lacolonialdocs.org/document/10603'
 order: '6'
