--- a/_keywords/d0266.md
+++ b/_keywords/d0266.md
@@ -16,7 +16,7 @@ abstract: This is a notarial document regarding the sale of Maria Juana, an ensl
 google_doc_prototype:
 keywords: sale
 lhc_scans: https://www.lacolonialdocs.org/document/13859
-layout: keywords_item.html
+layout: keywords_item
 collection: keywords
 comments: This document is short (just 5 pages), and I have only added one keyword
   so far ("sale"), because I want to go back after the initial transcription is done
