--- a/_keywords/d0281.md
+++ b/_keywords/d0281.md
@@ -17,9 +17,9 @@ abstract: This is a notarial document regarding a countersuit put against Manett
   (Naneta), a free Black woman, by Alexander Baure, for attempting to compel the freedom
   of Maturine.
 google_doc_prototype: https://docs.google.com/document/d/1RKmmi9fY2d_NLF0iVag1trq5HRW5t9HdV-vcl1ug92c/edit
-keywords: "emancipation|free people of color|collaboration"
+keywords: " emancipation|free people of color|collaboration"
 lhc_scans: https://www.lacolonialdocs.org/document/14177
-layout: keywords_item.html
+layout: keywords_item
 collection: keywords
 comments:
 order: '17'
