--- a/_keywords/d0326.md
+++ b/_keywords/d0326.md
@@ -17,7 +17,7 @@ abstract: This document concerns a sale of property on St. Ursula Street (?).  T
 google_doc_prototype:
 keywords: sale
 lhc_scans: https://www.lacolonialdocs.org/document/13967
-layout: keywords_item.html
+layout: keywords_item
 collection: keywords
 comments:
 order: '13'
