--- a/_keywords/d0335.md
+++ b/_keywords/d0335.md
@@ -31,7 +31,7 @@ abstract: Part 2 (see related doc) of interrogation of Jeannot, a man enslaved t
 google_doc_prototype: https://docs.google.com/document/d/1KHsdQsK3pjlPmXrBGkgp8pZdrmxWFABLecV-zOJsvj8/edit?usp=sharing
 keywords: religion|marronage|rival geography|conspiracy|song|fugitivity|voodoo
 lhc_scans: https://lacolonialdocs.org/document/5892
-layout: keywords_item.html
+layout: keywords_item
 collection: keywords
 comments:
 order: '11'
