--- a/_keywords/d0011.md
+++ b/_keywords/d0011.md
@@ -18,7 +18,7 @@ abstract: Notorial documentation of the terms of sale for a family of eight ensl
 google_doc_prototype: https://docs.google.com/document/d/1OTyPaU9ZgNGpT-9Oeq8eFiMSb54H-wHpa0U-IYV4q08/edit?usp=share_link
 keywords: kinship|transportation|contract labor
 lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-145519.jpg
-layout: keywords_item.html
+layout: keywords_item
 collection: keywords
 comments: Very interesting reference to Dominique, the father and a cook, being sent
   to France to serve in the "Cour du Roy." But again...really struggling with the
