--- a/_keywords/d0035.md
+++ b/_keywords/d0035.md
@@ -17,9 +17,9 @@ doc_type: Notarial Acts,Emancipation (of Slave)
 abstract: Enslaved woman petitioning for freedom due to cruelty of owner, and subsequent
   contestation over it
 google_doc_prototype: https://docs.google.com/document/d/1YWidQxWpc41T0f84SJPDltm7gGzpc-d8WGKw3N6TizA/edit?usp=sharing
-keywords: Violence|resistance|abuse|legalism|valuation|law|fugitivity|truancy|self-purchase|coartación|sale|survival|conspiracy|marronage|kinship
+keywords: " Violence|resistance|abuse|legalism|valuation|law|fugitivity|truancy|self-purchase|coartación|sale|survival|conspiracy|marronage|kinship"
 lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-212683.jpg
-layout: keywords_item.html
+layout: keywords_item
 collection: keywords
 comments: This is the 676-page one. Starts w/ first-person testimony from Maria Juana
   of the violence done to her. Contains testimony from enslaved witnesses. I stopped
