--- a/_keywords/d0128.md
+++ b/_keywords/d0128.md
@@ -16,9 +16,9 @@ names_native:
 doc_type: Notarial Acts,Declaration
 abstract: Declaration of Manuel and Jean
 google_doc_prototype: https://docs.google.com/document/d/1kO0Anx4lSNUJEw6We8S5svuVARfdzOcXmJ6a1JM9YNo/edit?usp=share_link
-keywords: "fugitivity|kinship|marronage|rival geography"
+keywords: " fugitivity|kinship|marronage|rival geography"
 lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-153613.jpg
-layout: keywords_item.html
+layout: keywords_item
 collection: keywords
 comments: still working through the multiple stories in this doc, will return to it
   this week and next- OB
