--- a/_keywords/d0129.md
+++ b/_keywords/d0129.md
@@ -25,7 +25,7 @@ abstract: Enslaver Chaperon grants power of attorney to Destrehan in order to re
 google_doc_prototype: https://docs.google.com/document/d/1bxAhBPPEWYqnTQLh_2T2AJHpfZDgEKM6CWE9fqrEIJg/edit?usp=share_link
 keywords: marronage|disability|fugitivity
 lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-145195.jpg
-layout: keywords_item.html
+layout: keywords_item
 collection: keywords
 comments: see 1739-11-07-02 and 1748-03-22-01
 order: '5'
