--- a/_keywords/d0218.md
+++ b/_keywords/d0218.md
@@ -20,7 +20,7 @@ abstract: Petition for self-purchase.
 google_doc_prototype: https://docs.google.com/document/d/15_9zwdKm6R12NqIKP39iH6hwM4YCCl4Lb95n100ONF8/edit?usp=share_link
 keywords: valuation|self-purchase|coartación|womanhood|childhood|kinship|disability|succession|motherhood
 lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-203597.jpg
-layout: keywords_item.html
+layout: keywords_item
 collection: keywords
 comments: "(Included in summer workshop docs. - LKB); included in SE; full transcription
   ROUGH drafted; translation coming (JMJ, 2022-10-22)"
