--- a/_keywords/d0264.md
+++ b/_keywords/d0264.md
@@ -18,9 +18,9 @@ abstract: Letter from enslaver Sainsone of Martinique to his stepson Denis Braud
   sent with Apollon as well as instructs Braud that he must pay for his passage and
   care "pendant la traversée."
 google_doc_prototype: https://docs.google.com/document/d/17oKASKtkj4RfsmOEK3NIbx3nHgGG1tblPPbXAd1s55E/edit?usp=share_link
-keywords: "la traversé|labor|Caribbean"
+keywords: " la traversé|labor|Caribbean"
 lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-159219.jpg
-layout: keywords_item.html
+layout: keywords_item
 collection: keywords
 comments: Apollon
 order: '9'
