--- a/_includes/excerpts/d0111.md
+++ b/_includes/excerpts/d0111.md
@@ -1,3 +1,198 @@
 ## Transcription  
 
+Naneta Saint Marc negra libre  
+habitante en el Puesto de Atacapas y actual=  
+mente en esta Ciudad ante VS por medio de  
+Pror. publico digo q.e tengo un hermano mio  
+nombrado Juan Pedro alias Bon homme  
+esclavo de Dn Salomon Prevot; el qual  
+deseando libertad por el precio de su justa  
+estimacion para q.e se verifique nombro  
+por tasador de mi parte a Santiago Cofier   
+Precediendo su accep.on y juram.to [sir viendne]  
+VS haberlo por nombrado y hacer saber   
+Ala otra parte nombre otro para q.e se   
+proceda a su avaluo. Participando y haciendo  
+presente al tribunal que dho negro bon   
+homme tiene muchos dolores procedentes de q.e   
+en el primer uracan le cayo sobre el cuerpo   
+una choza adonde estaba por tanto___  
+AVS suplico se sirva proveer y mandar como pido con justicia costa juro y para ello  
+  
+  
+[sign] Por Naneta  [signed] Felipe Guinaultt  
+  
+…  
+  
+Naneta St Marc parda libre, digo negra  
+libre en los autos que he promovido contra Dn Salomon Prevot sobre libertar a mi hermano   
+Juan Pedro alias Bonhomme negro su esclavo   
+por el precio de su estimacion ante VS digo   
+q.e el tasador q.e tenia nombrado no es inteligente en hacer avaluos en esta virtud nombro en   
+su lugar a Dn Luis Dauqueminil Demorand Sirviendose VS haberlo por nombrado en   
+la forma de estilo por tanto__  
+  
+AVS Sup.co a sirva proveer y mandar como pido con Justicia Juro y para ello   
+[&] Por Naneta St Marc   
+  
+[signed] Felipe Guinaultt  
+  
+…  
+  
+Taza.sn  
+En la Ciud.d de la Nueva Orle=  
+eans, a deiz y seis de Marzo, de   
+mil set.s noventa y tres años:   
+en virtud de lo dispuesto, y co=  
+micion dada parecieron ante mi   
+el ess.no D.n Juan Bautista Mer=  
+cier, y D.n Luis Dauquemenil   
+de Moran, Terceros nombrados   
+para la Tazas.on del Negro Juan   
+Pedro, alías Bon home, (solicitada   
+por)  esclavo de d.n Salomon Prebot,   
+solicitada por la Negra Naneta   
+Saint Marc, y haviedno cada   
+uno enteradose de la edad, circuns=  
+tancias, y talentos del dicho Ne=  
+gro, espusieron: el nominado D.n   
+Juan Bautista Mercier, que lo   
+tazava en la Cant.d de setecien=  
+tos p.s; y el nominado D.n Luis   
+Dauquemenil de Moran, en la de   
+Tres cientos cincuenta: es=  
+  
+//7r//  
+  
+=poniendo cada uno, ser el valor que   
+han dado a dho Negro, el que con=  
+sideran justo, y arreglado, y en el   
+que respectivam.te lo apreciaban   
+con lo qual Se concluyó esta di=  
+ligenz.a, que firmaron de que yo   
+el ess.no, doy fee=testador=solicita=  
+da por= no v@  
+  
+ [signed:] Louis Dauquemenil [Mlorant]   
+ [signed:] Merceir  
+  
+Ante mi  
+  [signed:] Carols Ximenez  
+  
+…  
+  
+En la Ciu.d de la nueva Orleans   
+abeinte yun de Marzo, de mil   
+Set.s noventa y tres: ante el S.or D.or   
+D.n Nicolas M.a Vidal, Th.te Gov.or Aud.or   
+de Grra, y assessor g.l del Gov.no pare=  
+cio D.n Ant.o Ramis, de este vecin=  
+dario tercero nombrado en discor=  
+dia para la taza.on del Negro   
+Juan Pedro, alias Bonhomme,   
+esclavo de D.n Salomon Prebot,   
+y hallandose, presente dho Ne=  
+gro, que reconocio, impuesto de   
+sus circunstan.s y hecho el juicio   
+combeniente, Dixo: que tazava   
+el nominado Juan Pedro en la   
+Cant.d de Trescientos cincuen=  
+ta p.s que es el valor que le   
+da, el que Concidera tener, y   
+en el que desde luego la ta=  
+za, conforme a lo que ciente,  
+  
+//10r//  
+  
+Y segun su inteligencia, y saber,   
+con lo qual se concluyo esta   
+diligencia que firmó, y rubricó   
+el S.or Th.te Gov.or de que yo el   
+ess.no doy fee=  
+  
+[signed] Antonio Ramis   
+  
+Ante mi: Carols Ximenez
+
+
+
+
 ## Translation  
+
+Naneta Saint Marc free negra  
+Resident of the Attakapas Post and presently   
+of this city before His Lordship by the means of   
+Public attorney I say that I have a brother of mine named Juan Pedro known as Bonhomme  
+slave to Sir Salomon Prevot; who  
+dreams of freedom based on the price of your just estimate so that it can be verified I name   
+Santiago Cofier the appraiser on my part   
+Proceeding his acceptance and oath to serve  
+His Lordship to name him and make known  
+To the other party named to take action for this appraisal. Participating and being present at the tribunal of the aforementioned negro Bonhomme has much pain coming from the fact that   
+the previous hurricane caused a hut where he was staying for a while to fall upon his body___  
+I beg that you serve to provide and order what I ask  
+with due justice to which you have sworn and are indebted to.   
+  
+[sign] By Naneta [signed] Felipe Guinaultt  
+  
+…  
+  
+Naneta St. Marc, parda libre, said negra   
+libre in the proceedings that I have brought against Sir Salomon Prevot about freeing my brother Juan Pedro, known as Bonhomme, his negro slave for the price of your appraisal before His Lordship said that the assessor that he had appointed is not intelligent with appraisals, in this virtue Sir Luis Dauquenminil Demorand was appointed in his place, serving His Lordship having been named in the form and manner thusly…  
+  
+  
+To Your Lordship, I beg of you serve to provide and command as I ask with sworn justice and for him and for Naneta St. Marc  
+  
+[signed] Felipe Guinaultt  
+  
+…  
+  
+Appraisal   
+In the City of New Orleans,  
+On March 16, 1793:   
+under the provisions and election   
+given appeared before me   
+the Notary Sir Juan Bautista Mercier   
+y Sir Luis Dauquenmenil   
+de Moran, third parties appointed   
+for the appraisal of the Negro Juan   
+Pedros, known as Bon Home, (solicited   
+by) slave of Sir Salomon Prebot,  
+solicited by the Negra Naneta   
+Saint Marc, and making each   
+one aware of the age, circumstances,   
+and talents of the said Negro,   
+they exhibited: the nominee Sir   
+Juan Bautista Mercier, who   
+appraised him in the amount of seven   
+hundred pesos; and the nominee Sir Luis Dauguemenil de Moran, in the amount   
+of three hundred and fifty:    
+  
+  
+//7rr//  
+  
+exposing each one, to be the value that  
+They had given to the aforementioned Negro, he   
+Whom they qualified as righteous and clean, respectively, which they appreciated, concluded this diligence, that they signed from which I   
+the Notary attest—testifier—requested  
+by our neighbors   
+  
+  
+[signed:] Louis Dauquemenil [Mlorant]  
+[signed:] Merceir  
+  
+Before me  
+   [signed:] Carols Ximenex  
+  
+  
+…  
+  
+In the city of New Orleans on the 21st of March, 1793: Before Sir Nicolas Maria Vidal, the Governor-Auditor of War, and Advisor General of the governor [parecio] Sir Antonio Ramis, of the third neighborhood named in dispute for the appraisal of Negro Juan Pedro, alias Bonhomme, slave of Sir Salomon Prebot, and being found, present the aforementioned Negro, that he recognized, informed of the circumstances and made the appropriate judgement. Saying: He appraised the nominee Juan Pedro in the amount of three hundred and fifty pesos that is the value that he gives it, the one that he considers it to have, and in which of course the appraisal, according to what I expected, and according to his understanding and knowledge, whereupon this diligence was concluded and signed, and initialed Sir Governor that I the notary attest  
+  
+[signed] Antonio Ramis  
+  
+  
+  
+  
+Before Me: Carlos Ximenez
+
