--- a/_keywords/d0004.md
+++ b/_keywords/d0004.md
@@ -23,7 +23,7 @@ layout: keywords_item
 collection: keywords
 comments:
 order: '0'
-thumbnail:
-full:
-manifest:
+thumbnail: "/img/derivatives/iiif/images/d0004/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/d0004/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/d0004/manifest.json"
 ---
