final thumbnail updates

--- a/_keywords/d0281.md
+++ b/_keywords/d0281.md
@@ -23,7 +23,7 @@ layout: keywords_item
 collection: keywords
 comments:
 order: '17'
-thumbnail: "/img/derivatives/iiif/images/d0281_d0281-01/full/250,/0/default.jpg"
+thumbnail: "img/derivatives/iiif/images/d0281_d0281-02/full/full/0/default.jpg"
 full: "/img/derivatives/iiif/images/d0281_d0281-01/full/1140,/0/default.jpg"
 manifest: "/img/derivatives/iiif/d0281/manifest.json"
 ---
