--- a/_keywords/d0335.md
+++ b/_keywords/d0335.md
@@ -35,7 +35,7 @@ layout: keywords_item
 collection: keywords
 comments:
 order: '11'
-thumbnail: "/img/derivatives/iiif/images/d0335_d0335-1/full/250,/0/default.jpg"
+thumbnail: "img/derivatives/iiif/images/d0335_d0335-2/full/full/0/default.jpg"
 full: "/img/derivatives/iiif/images/d0335_d0335-1/full/1140,/0/default.jpg"
 manifest: "/img/derivatives/iiif/d0335/manifest.json"
 ---
