--- a/_keywords/d0266.md
+++ b/_keywords/d0266.md
@@ -24,7 +24,7 @@ comments: This document is short (just 5 pages), and I have only added one keywo
   have been present between Nanette (a free Black woman) and Maria Juana (an enslaved
   woman) to compel the sale.
 order: '14'
-thumbnail: img/derivatives/iiif/images/d0266_d0266-2/full/full/0/default.jpg"
+thumbnail: "/img/derivatives/iiif/images/d0266_d0266-2/full/full/0/default.jpg"
 full: "/img/derivatives/iiif/images/d0266_d0266-1/full/1140,/0/default.jpg"
 manifest: "/img/derivatives/iiif/d0266/manifest.json"
 ---
