--- a/_keywords/d0127.md
+++ b/_keywords/d0127.md
@@ -28,7 +28,7 @@ comments: Fauchon, Antoine and Vulcain escaped to Havana with the unnamed "mulat
   slaves from New Orleans were captured in Havana and brought back to the city-- see
   1748-03-22-01
 order: '3'
-thumbnail: "img/derivatives/iiif/images/d0127_d0127-01/full/full/0/default.jpg"
+thumbnail: "img/derivatives/iiif/images/d0127_d0127-01/full/250,/0/default.jpg"
 full: "/img/derivatives/iiif/images/d0127_d0127-01/full/1140,/0/default.jpg"
 manifest: "/img/derivatives/iiif/d0127/manifest.json"
 ---
