--- a/_keywords/d0004.md
+++ b/_keywords/d0004.md
@@ -17,8 +17,9 @@ abstract: Freedom suit brought by siblings Pedro (Pierre) Morsu and Maria (Marie
   suit for their brother, an enslaved Black-Native man, named Bautista (Baptista/Baptiste)
   Bourgignon (Borguinon). All three siblings are freed.
 google_doc_prototype: https://docs.google.com/document/d/1moSeK7N-EHXCpMcEPU-1oyUzy9p45uV2sjiEUOhCvnQ/edit
+pdf: [pdf]()
 keywords: " freedom suit|manumission|Indian slavery|mixed-race|kinship|race|Afro-Indigeneity"
-lhc_scans:
+lhc_scans: https://www.lacolonialdocs.org/document/16450
 layout: keywords_item
 collection: keywords
 comments:
