correct lhc scan urls

--- a/_keywords/d0011.md
+++ b/_keywords/d0011.md
@@ -2,7 +2,7 @@
 pid: d0011
 label: Dominique and Kin Will Stay Together
 filing_date: '1744-12-16'
-full_index: 1744-12-16-01
+full_index: 1744-12-16-02
 doc_origin: New Orleans
 language: French
 archive: Louisiana Historical Center
@@ -17,7 +17,7 @@ abstract: Notorial documentation of the terms of sale for a family of eight ensl
   people from Salmon to Raguet
 google_doc_prototype: https://docs.google.com/document/d/1OTyPaU9ZgNGpT-9Oeq8eFiMSb54H-wHpa0U-IYV4q08/edit?usp=share_link
 keywords: kinship|transportation|contract labor
-lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-145519.jpg
+lhc_scans: https://www.lacolonialdocs.org/document/6373
 layout: keywords_item
 collection: keywords
 comments: Very interesting reference to Dominique, the father and a cook, being sent
