--- a/_keywords/d0127.md
+++ b/_keywords/d0127.md
@@ -20,7 +20,7 @@ abstract: Enslaver Chaperon declared that on July 28th, 1739 while he was away f
   to Chaperon, with "un mulatre Espagnol" who stole a boat from his enslaver Gonzalez.
 google_doc_prototype: https://docs.google.com/document/d/1Ph1tkvttVwowlK1eCWi_VA9GUK4mLLNe5ZrvTYAAxHw/edit?usp=share_link
 keywords: marronage|kinship|disability|transportation|collaboration
-lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-137003.jpg
+lhc_scans: https://www.lacolonialdocs.org/document/4583
 layout: keywords_item
 collection: keywords
 comments: Fauchon, Antoine and Vulcain escaped to Havana with the unnamed "mulatre
