--- a/_keywords/d0210.md
+++ b/_keywords/d0210.md
@@ -18,7 +18,7 @@ abstract: Raphaël Bernard a free Negro who’s been hired in France by Dumanoir
   was sent to Dumanoir to appear next day without fail]
 google_doc_prototype: https://docs.google.com/document/d/1t9bKGTmkUlfiGEspbWWpwuotdJOy3SYp4VibetfqOmk/edit?usp=share_link
 keywords: " freedom|legalism|emancipation|care|work"
-lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-118745.jpg
+lhc_scans: https://www.lacolonialdocs.org/document/195
 layout: keywords_item
 collection: keywords
 comments: Baptiste
