--- a/_keywords/d0005.md
+++ b/_keywords/d0005.md
@@ -19,7 +19,7 @@ abstract: 'Freedom suit brought by siblings Pedro (Pierre) Morsu and Maria (Mari
   Bourgignon (Borguinon). All three siblings are freed. '
 google_doc_prototype: https://docs.google.com/document/d/1RxoP18XadJu3eWhgbOrEYBnpNO_sE1PcLvM_5hv3huM/edit?usp=sharing
 keywords: freedom suit|manumission|Indian slavery|resistance|mixed-race|kinship|race
-lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-315146.jpg
+lhc_scans: https://www.lacolonialdocs.org/document/16821
 layout: keywords_item
 collection: keywords
 comments: Black-Native slave identified. Historical information researched, included
