--- a/_keywords/d0035.md
+++ b/_keywords/d0035.md
@@ -18,7 +18,7 @@ abstract: Enslaved woman petitioning for freedom due to cruelty of owner, and su
   contestation over it
 google_doc_prototype: https://docs.google.com/document/d/1YWidQxWpc41T0f84SJPDltm7gGzpc-d8WGKw3N6TizA/edit?usp=sharing
 keywords: " Violence|resistance|abuse|legalism|valuation|law|fugitivity|truancy|self-purchase|coartación|sale|survival|conspiracy|marronage|kinship"
-lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-212683.jpg
+lhc_scans: https://www.lacolonialdocs.org/document/14298
 layout: keywords_item
 collection: keywords
 comments: This is the 676-page one. Starts w/ first-person testimony from Maria Juana
