--- a/_keywords/d0129.md
+++ b/_keywords/d0129.md
@@ -24,7 +24,7 @@ abstract: Enslaver Chaperon grants power of attorney to Destrehan in order to re
   Consul in Cuba, to recapture Vulcain and potentially Antoine and Fauchon.
 google_doc_prototype: https://docs.google.com/document/d/1bxAhBPPEWYqnTQLh_2T2AJHpfZDgEKM6CWE9fqrEIJg/edit?usp=share_link
 keywords: marronage|disability|fugitivity
-lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-145195.jpg
+lhc_scans: https://www.lacolonialdocs.org/document/6307
 layout: keywords_item
 collection: keywords
 comments: see 1739-11-07-02 and 1748-03-22-01
