--- a/_keywords/d0264.md
+++ b/_keywords/d0264.md
@@ -19,7 +19,7 @@ abstract: Letter from enslaver Sainsone of Martinique to his stepson Denis Braud
   care "pendant la traversée."
 google_doc_prototype: https://docs.google.com/document/d/17oKASKtkj4RfsmOEK3NIbx3nHgGG1tblPPbXAd1s55E/edit?usp=share_link
 keywords: " la traversé|labor|Caribbean"
-lhc_scans: https://lacolonialdocs-data.s3.amazonaws.com/doc-img-800x0/doc-img-159219.jpg
+lhc_scans: https://www.lacolonialdocs.org/document/9038
 layout: keywords_item
 collection: keywords
 comments: Apollon
