--- a/_keywords/d0137.md
+++ b/_keywords/d0137.md
@@ -14,7 +14,7 @@ names_white: M. Dabbadie, M. Foucault, M. Delaronde, Louis Duchein, Alexandre de
 names_native: Marguerite (free Indian), "la sauvagesse de Blancpain"
 doc_type: Judicial Acts,Criminal Cases / Acts,Investigation
 abstract:
-google_doc_prototype: https://docs.google.com/document/d/1tPaa6PE9y-v5kJpvWsuRu7ABfs-HANa958NtJgo5MtI/edit?usp=share_link
+google_doc_prototype: https://drive.google.com/file/d/1xf9JUcLJUUCQyNEXkw4pTsZFR9_pU3Pe/view?usp=drive_link
 keywords: " marronage|kinship|labor|fugitivity|rival geography|play"
 lhc_scans: https://www.lacolonialdocs.org/document/10481
 layout: keywords_item
