add more PDF links

--- a/_keywords/d0005.md
+++ b/_keywords/d0005.md
@@ -17,7 +17,7 @@ abstract: 'Freedom suit brought by siblings Pedro (Pierre) Morsu and Maria (Mari
   Paget against the heirs of Lt. Gov. Francisco de Cruzat. This would prompt a second
   suit for their brother, an enslaved Black-Native man, named Bautista (Baptista/Baptiste)
   Bourgignon (Borguinon). All three siblings are freed. '
-google_doc_prototype: https://docs.google.com/document/d/1RxoP18XadJu3eWhgbOrEYBnpNO_sE1PcLvM_5hv3huM/edit?usp=sharing
+google_doc_prototype: https://drive.google.com/file/d/1rd4I9V_dR_bnQeovJBroOLWT9CZT4Sqh/view?usp=drive_link
 keywords: freedom suit|manumission|Indian slavery|resistance|mixed-race|kinship|race
 lhc_scans: https://www.lacolonialdocs.org/document/16821
 layout: keywords_item
