--- a/_keywords/d0035.md
+++ b/_keywords/d0035.md
@@ -16,7 +16,7 @@ names_native:
 doc_type: Notarial Acts,Emancipation (of Slave)
 abstract: Enslaved woman petitioning for freedom due to cruelty of owner, and subsequent
   contestation over it
-google_doc_prototype: https://docs.google.com/document/d/1YWidQxWpc41T0f84SJPDltm7gGzpc-d8WGKw3N6TizA/edit?usp=sharing
+google_doc_prototype: https://drive.google.com/file/d/18dl2sMnGhYQzuxOOD-LcAH7ppV6vpd1U/view?usp=sharing
 keywords: " Violence|resistance|abuse|legalism|valuation|law|fugitivity|truancy|self-purchase|coartación|sale|survival|conspiracy|marronage|kinship"
 lhc_scans: https://www.lacolonialdocs.org/document/14298
 layout: keywords_item
