--- a/_keywords/d0127.md
+++ b/_keywords/d0127.md
@@ -12,13 +12,8 @@ names_black: 'Antoine, Fauchon, Vulcain, unnamed "mulatre Espagnol" enslaved by 
 names_white: 'Chaperon, Gonzalez, Henry '
 names_native:
 doc_type: Judicial Acts,Criminal Cases / Acts,"Report (of Event, Action, Crime, etc.)"
-abstract: Enslaver Chaperon declared that on July 28th, 1739 while he was away from
-  his plantation in town on business, three enslaved people absconded from his plantation
-  and have not been seen or captured since. They were Antoine "Negre Bambara," his
-  wife Fauchon "du nation Senegal," and Vulcain, also of the Senegal nation, who escaped
-  with them despite having "les jambes coupé." They escaped the plantation, according
-  to Chaperon, with "un mulatre Espagnol" who stole a boat from his enslaver Gonzalez.
-google_doc_prototype: https://docs.google.com/document/d/1Ph1tkvttVwowlK1eCWi_VA9GUK4mLLNe5ZrvTYAAxHw/edit?usp=share_link
+abstract: Enslaver Chaperon declared that on July 28th, 1739 while he was away from his plantation in town on business, three enslaved people absconded from his plantation and have not been seen or captured since. They were Antoine "Negre Bambara," his wife Fauchon "du nation Senegal," and Vulcain, also of the Senegal nation, who escaped with them despite having "les jambes coupé." They escaped the plantation, according to Chaperon, with "un mulatre Espagnol" who stole a boat from his enslaver Gonzalez.
+google_doc_prototype: https://drive.google.com/file/d/1Oa3T6YiPpBltDRphU8k7mOTVnnzmLIKz/view?usp=sharing
 keywords: marronage|kinship|disability|transportation|collaboration
 lhc_scans: https://www.lacolonialdocs.org/document/4583
 layout: keywords_item
