--- a/_keywords/d0128.md
+++ b/_keywords/d0128.md
@@ -15,7 +15,7 @@ names_white: Tisserant/Tixerant, Joseph Chaperon, Aufrere, de Benac, Nicolas Hen
 names_native:
 doc_type: Notarial Acts,Declaration
 abstract: Declaration of Manuel and Jean
-google_doc_prototype: https://docs.google.com/document/d/1kO0Anx4lSNUJEw6We8S5svuVARfdzOcXmJ6a1JM9YNo/edit?usp=share_link
+google_doc_prototype: https://drive.google.com/file/d/1Ia9KXxAHIZ2Mkf5oYjJYGPYR8qgKEx7s/view?usp=sharing
 keywords: " fugitivity|kinship|marronage|rival geography"
 lhc_scans: https://www.lacolonialdocs.org/document/7960
 layout: keywords_item
