--- a/_keywords/d0129.md
+++ b/_keywords/d0129.md
@@ -9,20 +9,11 @@ language: French
 archive: Louisiana Historical Center
 governing_body: French Superior Council
 names_black: Antoine, Fauchon, and Vulcain (not named in the doc)
-names_white: Chaperon, Destrehan, Bloquin, Jacques Cantrelle, Gonzalez, Augustin Chantalou,
-  Henry Greffe
+names_white: Chaperon, Destrehan, Bloquin, Jacques Cantrelle, Gonzalez, Augustin Chantalou, Henry Greffe
 names_native:
 doc_type: Notarial Acts,Power of Attorney / Procuration
-abstract: Enslaver Chaperon grants power of attorney to Destrehan in order to recapture
-  fugitive slaves seen in Havana. Although Chaperon does not name the enslaved people
-  in this document, he references his Nov 7, 1739 declaration of runaway slaves (when
-  Antoine, Fauchon and Vulcain escaped with "un mulatre Espagnol"). Chaperon declared
-  that one of the three runaways (Vulcain, "lequel Esclave ayant les jambes coupee
-  a Eté Reconnu) was recognized in Havana by other enslaved people from Louisiana
-  who saw and spoke to him. Since Destrehan was returning to Cuba for business, Chaperon
-  granted Destrehan power of attorney in collaboration with Mr. Bloquin, the French
-  Consul in Cuba, to recapture Vulcain and potentially Antoine and Fauchon.
-google_doc_prototype: https://docs.google.com/document/d/1bxAhBPPEWYqnTQLh_2T2AJHpfZDgEKM6CWE9fqrEIJg/edit?usp=share_link
+abstract: Enslaver Chaperon grants power of attorney to Destrehan in order to recapture fugitive slaves seen in Havana. Although Chaperon does not name the enslaved people in this document, he references his Nov 7, 1739 declaration of runaway slaves (when Antoine, Fauchon and Vulcain escaped with "un mulatre Espagnol"). Chaperon declared that one of the three runaways (Vulcain, "lequel Esclave ayant les jambes coupee a Eté Reconnu) was recognized in Havana by other enslaved people from Louisiana who saw and spoke to him. Since Destrehan was returning to Cuba for business, Chaperon granted Destrehan power of attorney in collaboration with Mr. Bloquin, the French Consul in Cuba, to recapture Vulcain and potentially Antoine and Fauchon.
+google_doc_prototype: https://drive.google.com/file/d/1vsXgAUxI4zoWU7JcgHzzItMNJ9U9wHhn/view?usp=sharing
 keywords: marronage|disability|fugitivity
 lhc_scans: https://www.lacolonialdocs.org/document/6307
 layout: keywords_item
