--- a/_keywords/d0210.md
+++ b/_keywords/d0210.md
@@ -16,7 +16,7 @@ abstract: Raphaël Bernard a free Negro who’s been hired in France by Dumanoir
   him of his due salary and clothing. He asked to be sent back to France at Dumanoir
   expense and to have a trunk now detained at the Chaouachas returned to him. [A notice
   was sent to Dumanoir to appear next day without fail]
-google_doc_prototype: https://docs.google.com/document/d/1t9bKGTmkUlfiGEspbWWpwuotdJOy3SYp4VibetfqOmk/edit?usp=share_link
+google_doc_prototype: https://drive.google.com/file/d/1_kOTsTqumB5b4RdJssLF9BoNSY2qOQHb/view?usp=sharing
 keywords: " freedom|legalism|emancipation|care|work"
 lhc_scans: https://www.lacolonialdocs.org/document/195
 layout: keywords_item
