--- a/_keywords/d0218.md
+++ b/_keywords/d0218.md
@@ -17,7 +17,7 @@ names_white: Juan Renato Gabriel Fazende, Jean Etienne de Boré, Andrés Almones
 names_native:
 doc_type: Notarial Acts,Emancipation (of Slave)
 abstract: Petition for self-purchase.
-google_doc_prototype: https://docs.google.com/document/d/15_9zwdKm6R12NqIKP39iH6hwM4YCCl4Lb95n100ONF8/edit?usp=share_link
+google_doc_prototype: https://drive.google.com/file/d/1L0CkE8DbkbbfVmWkzy_H2aZnUnQ5jqfZ/view?usp=sharing
 keywords: valuation|self-purchase|coartación|womanhood|childhood|kinship|disability|succession|motherhood
 lhc_scans: https://www.lacolonialdocs.org/document/14161
 layout: keywords_item
