--- a/_keywords/d0264.md
+++ b/_keywords/d0264.md
@@ -17,7 +17,7 @@ abstract: Letter from enslaver Sainsone of Martinique to his stepson Denis Braud
   with him "un negre ferblantier" (tinsmith) named Apollon. Lists things (tools?)
   sent with Apollon as well as instructs Braud that he must pay for his passage and
   care "pendant la traversée."
-google_doc_prototype: https://docs.google.com/document/d/17oKASKtkj4RfsmOEK3NIbx3nHgGG1tblPPbXAd1s55E/edit?usp=share_link
+google_doc_prototype: https://drive.google.com/file/d/1k6N8auOZRDKTbgbOfhYrMW9Z9XtdJiiX/view?usp=sharing
 keywords: " la traversé|labor|Caribbean"
 lhc_scans: https://www.lacolonialdocs.org/document/9038
 layout: keywords_item
