--- a/_keywords/d0326.md
+++ b/_keywords/d0326.md
@@ -14,7 +14,7 @@ doc_type: Notarial Acts, Immovable, Sale of Property
 abstract: This document concerns a sale of property on St. Ursula Street (?).  The
   sale of property takes place between Genoveva Junon, a free Black woman, and Maria
   Juana, a free Black woman.
-google_doc_prototype:
+google_doc_prototype: https://drive.google.com/file/d/1R5KrWdDAz_KaqPEK7yCrmZk4DVY3FLpe/view?usp=drive_link
 keywords: sale
 lhc_scans: https://www.lacolonialdocs.org/document/13967
 layout: keywords_item
