--- a/_keywords/d0072.md
+++ b/_keywords/d0072.md
@@ -22,7 +22,7 @@ abstract: Petition on the succession of the estate of Coustilhas from the Admini
   than spend the money to care for him. Hypolite was sold to Francois Seguier. This
   document is part of a series of documents related to the succession of the estate
   of Coustilhas.
-google_doc_prototype: https://docs.google.com/document/d/1npxptod2Y7TtR5BH7y4ZvoK6CsHYLzlls_NTpmeSQ7s/edit?usp=sharing
+google_doc_prototype: https://drive.google.com/file/d/1FrDcRnz92KGbp4nG3NBpdSbOEW7vQ88m/view?usp=drive_link
 keywords: wellnes|health|care
 lhc_scans: https://www.lacolonialdocs.org/document/5149
 layout: keywords_item
