--- a/_keywords/d0073.md
+++ b/_keywords/d0073.md
@@ -14,7 +14,7 @@ doc_type: Private Documents, Certificate
 abstract: 'The surgeon Prat visited Hypolite at the plantation of Coustilhas and reported
   that he is attacked with a violent cough and fever and his life is severly threatened
   by the illness. '
-google_doc_prototype: https://docs.google.com/document/d/1npxptod2Y7TtR5BH7y4ZvoK6CsHYLzlls_NTpmeSQ7s/edit?usp=sharing
+google_doc_prototype: https://drive.google.com/file/d/1XxV43FFRNOTAhN_FCwXcMbjwmxjhptEc/view?usp=drive_link
 keywords: wellnes|health|care
 lhc_scans: https://www.lacolonialdocs.org/document/5150
 layout: keywords_item
