--- a/_keywords/d0074.md
+++ b/_keywords/d0074.md
@@ -12,7 +12,7 @@ names_white: Jacques de Coustilhas; Marin Lenormand
 names_native:
 doc_type: Judicial Acts, Civil Cases / Acts, Auction / Sheriff's Sale
 abstract: advertisement of sale at public auction of Hypolite
-google_doc_prototype: https://docs.google.com/document/d/1npxptod2Y7TtR5BH7y4ZvoK6CsHYLzlls_NTpmeSQ7s/edit?usp=sharing
+google_doc_prototype: https://drive.google.com/file/d/1GDFa6wyhBqimDhGB2ffnMeEKLvoLbLlO/view?usp=drive_link
 keywords: slave|auction|slave auction
 lhc_scans: https://www.lacolonialdocs.org/document/5154
 layout: keywords_item
