--- a/_keywords/d0335.md
+++ b/_keywords/d0335.md
@@ -28,7 +28,7 @@ abstract: Part 2 (see related doc) of interrogation of Jeannot, a man enslaved t
   marons." Asked about his own maronnage, to which he admits to running away for about
   eight days five weeks ago because his mistress threatened to bring him to the city
   to be punished.
-google_doc_prototype: https://docs.google.com/document/d/1KHsdQsK3pjlPmXrBGkgp8pZdrmxWFABLecV-zOJsvj8/edit?usp=sharing
+google_doc_prototype: https://drive.google.com/file/d/1kzHEqQaVQEqjQb_3EwCblw0ph9y8JB5r/view?usp=drive_link
 keywords: religion|marronage|rival geography|conspiracy|song|fugitivity|voodoo
 lhc_scans: https://lacolonialdocs.org/document/5892
 layout: keywords_item
