--- a/_keywords/d0075.md
+++ b/_keywords/d0075.md
@@ -17,7 +17,7 @@ abstract: manumission record for Marie Aram who gained her freedom via her and h
   Tiocou, worked for Charity Hospital for seven years beginning in 1737 for his wife's
   freedom. Francois Tiocou was of the Senegal nation and gained his freedom from service
   in the Natchez wars.
-google_doc_prototype: https://docs.google.com/document/d/1y8SxrnuvtPfV8dGukHnWlRzv11ZhTpX2ar4RGxJ_pmM/edit?usp=sharing
+google_doc_prototype: https://drive.google.com/file/d/10wHEub7V6WKY_oeEk1CqPYV3xMrm4fn7/view?usp=drive_link
 keywords: kinship|manumission|military|marriage
 lhc_scans: https://www.lacolonialdocs.org/document/6161
 layout: keywords_item
