--- a/_keywords/d0011.md
+++ b/_keywords/d0011.md
@@ -25,7 +25,7 @@ comments: Very interesting reference to Dominique, the father and a cook, being 
   script... The rest of the family is denoted on the colonial docs site as "(Salmon
   - Rauget) Unidentified family" and "(Salmon - Raguet) Dominique"
 order: '1'
-thumbnail: "/img/derivatives/iiif/images/d0072_d0072-02/full/1140,/0/default.jpg"
+thumbnail: "img/derivatives/iiif/images/d0011_d0011-01/full/full/0/default.jpg"
 full: "/img/derivatives/iiif/images/d0011_d0011-1/full/1140,/0/default.jpg"
 manifest: "/img/derivatives/iiif/d0011/manifest.json"
 ---
