--- a/_keywords/d0326.md
+++ b/_keywords/d0326.md
@@ -21,7 +21,7 @@ layout: keywords_item
 collection: keywords
 comments:
 order: '13'
-thumbnail: "img/derivatives/iiif/images/d0326_d0326-2/full/full/0/default.jpg"
+thumbnail: "img/derivatives/iiif/images/d0326_d0326-2/full/250,/0/default.jpg"
 full: "/img/derivatives/iiif/images/d0326_d0326-1/full/1140,/0/default.jpg"
 manifest: "/img/derivatives/iiif/d0326/manifest.json"
 ---
