Add missing manifests, update image refs

--- a/_keywords/d0072.md
+++ b/_keywords/d0072.md
@@ -30,6 +30,6 @@ collection: keywords
 comments:
 order: '17'
 thumbnail: "img/derivatives/iiif/images/d0072_d0072-02/full/250,/0/default.jpg"
-full: "/img/derivatives/simple/d0072_d0072-04/fullwidth.jpg"
-manifest:
+full: "img/derivatives/iiif/images/d0072_d0072-02/full/full/0/default.jpg"
+manifest: "img/derivatives/iiif/d0072/manifest.json"
 ---
