--- a/_keywords/d0073.md
+++ b/_keywords/d0073.md
@@ -21,7 +21,7 @@ layout: keywords_item
 collection: keywords
 comments:
 order: '18'
-thumbnail: "img/derivatives/iiif/images/d0073/full/full/0/default.jpg"
-full: "/img/derivatives/simple/d0073/fullwidth.jpg"
-manifest:
+thumbnail: "img/derivatives/iiif/images/d0073/full/250,/0/default.jpg"
+full: "img/derivatives/iiif/images/d0073/full/full/0/default.jpg"
+manifest: "img/derivatives/iiif/d0073/manifest.json"
 ---
