--- a/_keywords/d0074.md
+++ b/_keywords/d0074.md
@@ -19,7 +19,7 @@ layout: keywords_item
 collection: keywords
 comments:
 order: '19'
-thumbnail: "img/derivatives/iiif/images/d0074/full/full/0/default.jpg"
-full: "/img/derivatives/simple/d0074/fullwidth.jpg"
-manifest:
+thumbnail: "img/derivatives/iiif/images/d0074/full/250,/0/default.jpg"
+full: "img/derivatives/iiif/images/d0074/full/full/0/default.jpg"
+manifest: "img/derivatives/iiif/d0074/manifest.json"
 ---
